# MoneyWar

./: .gitignore  Cargo.toml  README.md  moneywar.toml.example  mw
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
crates/moneywar-cli/: Cargo.toml
crates/moneywar-cli/src/: chatter.rs  main.rs  mp_session.rs  net_client.rs
crates/moneywar-domain/: Cargo.toml
crates/moneywar-domain/src/: balance.rs  caravan.rs  city.rs  command.rs  config.rs  contract.rs  error.rs  event.rs  factory.rs  ids.rs  lib.rs  loan.rs  money.rs  news.rs  order.rs  personality.rs  player.rs  product.rs  state.rs  time.rs
crates/moneywar-domain/tests/: smoke.rs
crates/moneywar-engine/: Cargo.toml
crates/moneywar-engine/src/: bank.rs  contracts.rs  economy.rs  error.rs  events.rs  indices.rs  lib.rs  loans.rs  market.rs  news.rs  production.rs  report.rs  rng.rs  scoring.rs  tick.rs  transport.rs
crates/moneywar-engine/tests/: arbitrage_flow.rs  contract_flow.rs  determinism_proptest.proptest-regressions  determinism_proptest.rs  loan_flow.rs  news_subscription_flow.rs  production_flow.rs  smoke.rs
crates/moneywar-net/: Cargo.toml
crates/moneywar-net/src/: lib.rs
crates/moneywar-npc/: Cargo.toml
crates/moneywar-npc/src/: error.rs  lib.rs
crates/moneywar-npc/src/behavior/: candidates.rs  difficulty.rs  mod.rs  personality.rs  pricing.rs  scoring.rs  signals.rs
crates/moneywar-npc/src/behavior/roles/: alici.rs  ciftci.rs  esnaf.rs  mod.rs  sanayici.rs  spekulator.rs  tuccar.rs
crates/moneywar-npc/src/dss/: contract.rs  inputs.rs  mod.rs  personality.rs  sanayici.rs  tuccar.rs  utility.rs
crates/moneywar-npc/src/engine/: decide.rs  inputs.rs  mod.rs  vars.rs
crates/moneywar-npc/src/engine/rules/: alici.rs  ciftci.rs  esnaf.rs  mod.rs  sanayici.rs  spekulator.rs  tuccar.rs
crates/moneywar-npc/src/fuzzy/: engine.rs  membership.rs  mod.rs  rule.rs  variable.rs
crates/moneywar-npc/src/synthetic/: mod.rs
crates/moneywar-npc/tests/: dss_tuning.rs  esnaf_sim.rs  full_game.rs  smoke.rs
crates/moneywar-server/: Cargo.toml
crates/moneywar-server/src/: game.rs  lobby.rs  main.rs  world.rs
crates/moneywar-sim/: Cargo.toml
crates/moneywar-sim/src/: lib.rs  logbuilder.rs  report.rs  runner.rs  scenario.rs  snapshot.rs  stats.rs  thresholds.rs  trace.rs
docs/: API.md  architecture.md  contracts-bidirectional-plan.md  economy-math.md  features.md  fuzzy-ai-test-platform-plan.md  game-design.md  multiplayer-roadmap.md  npc-demand-fix-plan.md  npc-quality-bar.md  trailing-order-plan.md
