[workspace]
resolver = "3"
members = [
    "crates/moneywar-domain",
    "crates/moneywar-engine",
    "crates/moneywar-npc",
    "crates/moneywar-net",
    "crates/moneywar-server",
    "crates/moneywar-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "UNLICENSED"
authors = ["firatege"]
description = "Tick-tabanlı ekonomi simülasyon oyunu — motor + terminal TUI"
repository = "https://github.com/firatege/MoneyWar"
readme = "README.md"
keywords = ["game", "simulation", "economy", "tui", "ratatui"]
categories = ["games"]

[workspace.lints.rust]
unsafe_code = "forbid"
missing_debug_implementations = "warn"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
# similar_names — Rust 1.85 clippy'sinde tetikleniyor (cur/last, sell/buy
# gibi). Domain-spesifik dış değişkenler için isim çatışması anlam taşıyor.
similar_names = "allow"

[workspace.dependencies]
# Domain / serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "2"
anyhow = "1"

# Collections / determinism
rand = "0.9"
rand_chacha = "0.9"

# CLI TUI
ratatui = "0.29"
crossterm = "0.28"

# Network (LAN multiplayer)
tokio = { version = "1", features = ["net", "io-util", "rt-multi-thread", "macros", "sync", "time", "signal"] }
tokio-util = { version = "0.7", features = ["codec"] }
bytes = "1"
futures-util = { version = "0.3", features = ["sink"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Intra-workspace
moneywar-domain = { path = "crates/moneywar-domain" }
moneywar-engine = { path = "crates/moneywar-engine" }
moneywar-npc = { path = "crates/moneywar-npc" }
moneywar-net = { path = "crates/moneywar-net" }

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
