[package]
name = "moneywar-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "moneywar"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
moneywar-domain.workspace = true
moneywar-engine.workspace = true
moneywar-npc.workspace = true
