[package]
name = "moneywar-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "MoneyWar — terminal TUI ile ekonomi simülasyon oyunu"
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "moneywar"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
moneywar-domain.workspace = true
moneywar-engine.workspace = true
moneywar-npc.workspace = true
moneywar-net.workspace = true
ratatui.workspace = true
crossterm.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
rand.workspace = true
rand_chacha.workspace = true

# Network client (Sprint 1+: --connect flag)
tokio.workspace = true
tokio-util.workspace = true
bytes.workspace = true
futures-util.workspace = true
postcard = { version = "1", features = ["alloc"] }
