[package]
name = "moneywar-engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
moneywar-domain.workspace = true
thiserror.workspace = true
rand.workspace = true
rand_chacha.workspace = true
serde.workspace = true

[dev-dependencies]
serde_json.workspace = true
proptest = "1"
