[package]
name = "moneywar-net"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
moneywar-domain.workspace = true
serde.workspace = true
postcard = { version = "1", features = ["alloc"] }
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
bytes.workspace = true
futures-util.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }

[lints]
workspace = true
