[package]
name = "moneywar-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "moneywar-server"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
moneywar-domain.workspace = true
moneywar-engine.workspace = true
moneywar-npc.workspace = true
moneywar-net.workspace = true

# Network runtime
tokio.workspace = true
tokio-util.workspace = true
bytes.workspace = true
futures-util.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

# Misc
anyhow = "1"
serde_json.workspace = true
